--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:browser": "playwright test tests/e2e/browser.spec.ts --reporter=none",
-    "test:e2e:api": "playwright test tests/e2e/api.spec.ts --reporter=none"
+    "test:e2e:api": "playwright test tests/e2e/api.spec.ts --reporter=none",
+    "test:ci": "playwright test --project=chromium --reporter=dot"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
