--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
-          cache: 'npm'
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -30,9 +30,9 @@ jobs:
         run: >
           npx playwright test --project=chromium --reporter=dot
         env:
-          PLAYWRIGHT_HEADLESS: '1'
-          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: '0'
-          CI: 'true'
+          PLAYWRIGHT_HEADLESS: "1"
+          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: "0"
+          CI: "true"
 
       - name: Upload Playwright test results on failure
         if: failure()
@@ -44,7 +44,6 @@ jobs:
       - name: Fail if any test failed
         if: failure()
         run: exit 1
-
 # Notes:
 # - Only Chromium is used for tests (see --project=chromium)
 # - Playwright UI reports are not generated or uploaded
